# agent-plane

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  jobs.example.json  jobs.json  list_projects.py  main.py  pyproject.toml  scheduler.py
cli/: app.py
models/: __init__.py
skills/: __init__.py  _common.jinja
skills/example/: SKILL.md  config.json  example-lint.md  example-pr.md  prompt.jinja  prompt.txt
skills/tvm/: SKILL.md  config.json  prompt.jinja  prompt.txt  tvm-build.md  tvm-lint.md  tvm-pytest.md
src/agent_plane/: __init__.py  cli.py  models.py  runner.py  scheduler.py
tests/: test_cli.py  test_validation.py
