[project]
name = "agent-plane"
version = "0.1.0"
description = "Claude workflow automation"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "pydantic>=2.12.5",
]

[project.scripts]
agent-plane = "agent_plane.cli:main"
agent-plane-scheduler = "agent_plane.scheduler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_plane"]

[dependency-groups]
dev = ["ruff>=0.14.10"]
